# picogus_scratch

./: .gitmodules
common/: picogus.h
sw/: CMakeLists.txt  palplay.cpp  picogus.cpp  sbdsp.cpp  usbplay.cpp  ws2812.pio
sw/libdlo/: CMakeLists.txt  dlo_structs.h  dlo_usb.c  dlo_usb.h  libdlo.c  libdlo.h  usb.c  usb.h
